--- a/.github/workflows/go-example.yml
+++ b/.github/workflows/go-example.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build ${{ env.FILE_NAME }} for windows-latest
       run: GOOS=windows GOARCH=amd64 go build ${{ env.FILE_NAME }}.go
-      
+
     - name: Upload artifact for linux
       uses: actions/upload-artifact@v1.0.0
       with:
@@ -36,3 +36,32 @@ jobs:
       with:
         name: windows
         path: ./${{ env.FILE_NAME }}.exe
+
+  download-and-run-linux:
+    name: Download and run Linux
+    runs-on: ubuntu-latest
+    steps:
+    
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Download Linux artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: linux
+
+    - name: Run script
+      run: source ./run.sh
+
+  download-only-windows:
+    name: Download Windows
+    runs-on: windows-latest
+    steps:
+    
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Download Windows artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: windows
