--- a/.github/workflows/go-example.yml
+++ b/.github/workflows/go-example.yml
@@ -26,13 +26,13 @@ jobs:
       run: GOOS=windows GOARCH=amd64 go build ${{ env.FILE_NAME }}.go
 
     - name: Upload artifact for linux
-      uses: actions/upload-artifact@v1.0.0
+      uses: actions/upload-artifact@v1
       with:
         name: linux
         path: ./${{ env.FILE_NAME }}
 
     - name: Upload artifact for Windows
-      uses: actions/upload-artifact@v1.0.0
+      uses: actions/upload-artifact@v1
       with:
         name: windows
         path: ./${{ env.FILE_NAME }}.exe
@@ -40,6 +40,7 @@ jobs:
   download-and-run-linux:
     name: Download and run Linux
     runs-on: ubuntu-latest
+    needs: build-go  # Garantir que o build-go seja concluído antes
     steps:
     
     - name: Checkout code
@@ -56,6 +57,7 @@ jobs:
   download-only-windows:
     name: Download Windows
     runs-on: windows-latest
+    needs: build-go  # Garantir que o build-go seja concluído antes
     steps:
     
     - name: Checkout code
