--- a/.github/workflows/go-example.yml
+++ b/.github/workflows/go-example.yml
@@ -1,36 +1,45 @@
-name: artifact
+name: CI/CD Impacta
+run-name: "Action iniciada por @${{ github.actor }} na branch ${{github.ref_name}}"
 
 on:
   push:
-    branches:
-      - main
+    branches: ["dev"]
+  pull_request:
+      branches: [ "main" ]
+  workflow_dispatch:
 
 env:
-  FILE_NAME: hello-server
+  FILE_NAME: ${{vars.FILE_NAME}}
 
 jobs:
-  build-go:
-    name: Build Go
+  download-and-run-linux:
     runs-on: ubuntu-latest
     steps:
+      - name: "Step: Cloning repository..."
+        uses: actions/checkout@v4
 
-    - name: Checkout Go code
-      uses: actions/checkout@v2
+      - name: "Set up Go"
+        uses: ./.github/actions/build_go
+        with:
+          vars: ${{env.FILE_NAME}}
 
-    - name: Build ${{ env.FILE_NAME }} for ubuntu-latest
-      run: go build ${{ env.FILE_NAME }}.go
+      - name: "Upload Artifact..."
+        uses: ./.github/actions/artifactUpload
+        with:
+          vars: ${{env.FILE_NAME}}
 
-    - name: Build ${{ env.FILE_NAME }} for windows-latest
-      run: GOOS=windows GOARCH=amd64 go build ${{ env.FILE_NAME }}.go
-      
-    - name: Upload artifact for linux
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        name: linux
-        path: ./${{ env.FILE_NAME }}
+  download-only-windows:
+    runs-on: windows-latest
+    steps:
+      - name: "Step: Cloning repository..."
+        uses: actions/checkout@v4
 
-    - name: Upload artifact for Windows
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        name: windows
-        path: ./${{ env.FILE_NAME }}.exe
+      - name: "Set up Go"
+        uses: ./.github/actions/build_go
+        with:
+          vars: ${{env.FILE_NAME}}
+
+      - name: "Upload Artifact..."
+        uses: ./.github/actions/artifactUpload
+        with:
+          vars: ${{env.FILE_NAME}}
