--- a/.github/workflows/go-example.yml
+++ b/.github/workflows/go-example.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: "*/15 0-23 * * 1-6" # A cada 15 minutos, de segunda a sábado
 
 env:
   FILE_NAME: hello-server
@@ -24,28 +22,41 @@ jobs:
 
     - name: Build ${{ env.FILE_NAME }} for windows-latest
       run: GOOS=windows GOARCH=amd64 go build ${{ env.FILE_NAME }}.go
-
-    - name: Upload Linux artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: linux
-        path: ./hello-server-linux
-
-    - name: Upload Windows artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: windows
-        path: ./hello-server-windows
-
       
-    - name: Upload artifact for linux
-      uses: actions/upload-artifact@v4
+    - name: Upload artifact for Linux
+      uses: actions/upload-artifact@v3
       with:
         name: linux
         path: ./${{ env.FILE_NAME }}
 
     - name: Upload artifact for Windows
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
         name: windows
         path: ./${{ env.FILE_NAME }}.exe
+
+  download-and-run-linux:
+    name: Download and run Linux
+    runs-on: ubuntu-latest
+    needs: build-go
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Download linux artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: linux
+      - name: Execute run.sh
+        run: source ./run.sh
+
+  download-only-windows:
+    name: Download Windows
+    runs-on: windows-latest
+    needs: build-go
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Download windows artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: windows
