--- a/.github/workflows/go-example.yml
+++ b/.github/workflows/go-example.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: "*/15 0-23 * * 1-6"  # A cada 15 minutos, de segunda a sábado
+  #schedule:
+  #  - cron: "*/15 0-23 * * 1-6"  # A cada 15 minutos, de segunda a sábado
 
 env:
   FILE_NAME: hello-server
